2008-10-10 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* mlog.c
	Fixed [2158198] syslog call incorrect

2008-10-09 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerDrv.c
	Fixed [2027392] Bug in Query processing
		(patch by Luong Nguyen-Duy)

2008-10-09 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLExport.c
	Fixed [2028194] Failure in generating indication 
		(patch by Luong Nguyen-Duy)

2008-10-07 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am configure.ac all files under sfcb/test
	Fixed [2150019] sfcb test suite

2008-10-06 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* classProviderGz.c
	Fixed [2101035] classProvider core dumps under slp/CIM client load 

2008-10-03 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	Fixed [ 2064360 ] Internal provider SIGSEGV when calling getProperty

	Fixed [ 2079099 ] SFCB should load providers with RTLD_GLOBAL
	(patch by Bart Whitely)

	Removed unused hunks of code (related to 1643936)

2008-10-02 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	Fixed [ 1877578 ] sfcb appears to leak memory while handling indications

	* sfcBroker.c:
	Fixed [ 2138163 ] sfcb: Wrong PID when running as daemon
	(patch by Ingo van Lil)

	* cimcClientSfcbLocal.c, msgqueue.c:
	Fixed [ 2049872 ] "--- Warning: fd is closed" message from binary intf app

	* cimcClientSfcbLocal.c, providerDrv.c:
	Fixed [ 2143315 ] Remove unnecessary lines in providerDrv & cimcClient
	
2008-09-10 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* instance.c:
	Fixed [ 2100707 ] NULL properties in property list returned with value
	(patch by Alexander Dunfey)

2008-09-09 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* getSchema.pre.in:
	Fixed [ 2100911 ] getSchema.sh: line 17: [: =: unary operator expected
	(patch by Narasimha Sharoff)

2008-09-05 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am, configure.ac, control.c, cimslpCMPI.c, sfcb.cfg.pre.in